; ModuleID = '/home/carl/AnghaBench/zstd/lib/compress/extr_zstd_compress.c_ZSTD_compressBlock.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/compress/extr_zstd_compress.c_ZSTD_compressBlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [33 x i8] c"ZSTD_compressBlock: srcSize = %u\00", align 1
@srcSize_wrong = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZSTD_compressBlock(i32* %0, i8* %1, i64 %2, i8* %3, i64 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %12 = load i64, i64* %10, align 8
  %13 = trunc i64 %12 to i32
  %14 = call i32 @DEBUGLOG(i32 5, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32*, i32** %6, align 8
  %16 = call i64 @ZSTD_getBlockSize(i32* %15)
  store i64 %16, i64* %11, align 8
  %17 = load i64, i64* %10, align 8
  %18 = load i64, i64* %11, align 8
  %19 = icmp ugt i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = load i32, i32* @srcSize_wrong, align 4
  %22 = call i32 @RETURN_ERROR_IF(i32 %20, i32 %21)
  %23 = load i32*, i32** %6, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = load i64, i64* %8, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = load i64, i64* %10, align 8
  %28 = call i64 @ZSTD_compressContinue_internal(i32* %23, i8* %24, i64 %25, i8* %26, i64 %27, i32 0, i32 0)
  ret i64 %28
}

declare dso_local i32 @DEBUGLOG(i32, i8*, i32) #1

declare dso_local i64 @ZSTD_getBlockSize(i32*) #1

declare dso_local i32 @RETURN_ERROR_IF(i32, i32) #1

declare dso_local i64 @ZSTD_compressContinue_internal(i32*, i8*, i64, i8*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
